# ChangeLog for app-editors/gvim
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.394 2013/05/17 00:44:17 radhermit Exp $

*gvim-9999 (17 May 2013)

  17 May 2013; Tim Harder <radhermit@gentoo.org> +gvim-9999.ebuild:
  Add live ebuild.

  12 May 2013; Agostino Sarubbo <ago@gentoo.org> gvim-7.3.762.ebuild:
  Stable for arm, wrt bug #469010

  10 May 2013; Agostino Sarubbo <ago@gentoo.org> gvim-7.3.762.ebuild:
  Stable for ppc64, wrt bug #469010

  10 May 2013; Agostino Sarubbo <ago@gentoo.org> gvim-7.3.762.ebuild:
  Stable for ppc, wrt bug #469010

  10 May 2013; Agostino Sarubbo <ago@gentoo.org> gvim-7.3.762.ebuild:
  Stable for x86, wrt bug #469010

  10 May 2013; Agostino Sarubbo <ago@gentoo.org> gvim-7.3.762.ebuild:
  Stable for amd64, wrt bug #469010

  08 May 2013; Jeroen Roovers <jer@gentoo.org> gvim-7.3.762.ebuild:
  Stable for HPPA (bug #469010).

*gvim-7.3.931 (08 May 2013)

  08 May 2013; Tim Harder <radhermit@gentoo.org> +gvim-7.3.931.ebuild:
  Version bump.

*gvim-7.3.905 (21 Apr 2013)

  21 Apr 2013; Tim Harder <radhermit@gentoo.org> +files/gvim-python3.patch,
  +gvim-7.3.905.ebuild:
  Version bump, update to EAPI 5 and support python3.

*gvim-7.3.762 (27 Dec 2012)

  27 Dec 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.762.ebuild:
  Version bump - 7.3.762

*gvim-7.3.646 (30 Aug 2012)

  30 Aug 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.646.ebuild:
  Version bump: 7.3.646 is released

*gvim-7.3.600 (12 Jul 2012)

  12 Jul 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.600.ebuild:
  Version bump: 7.3.600 is released

*gvim-7.3.566 (27 Jun 2012)

  27 Jun 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.566.ebuild:
  Version bump: 7.3.566 is released

*gvim-7.3.556 (19 Jun 2012)

  19 Jun 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.556.ebuild:
  Version bump: 7.3.556 is released

*gvim-7.3.537 (01 Jun 2012)
