@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX gvim-7.1-interix-link.patch 716 SHA256 53459943e62247469f6fbaa30abd36d7629e02bd26bebe3e8947d45b23408bc9 SHA512 f2d5401eef38dcd998e6df4dedb3035d7818aa491049457efeea686b58c7f221003032bbf0837d51fe0545152246ac07fe0bf4a64b10a1b2493146abc023011a WHIRLPOOL d319c29e5bcbbf61dfb4a75f7d9f992b71520314c15056b73505de69c45db41c5b16413d11a94172579c9de56713c65101bbf9427828940c98d24ff8845df870
 AUX gvim-7.1.285-darwin-x11link.patch 388 SHA256 0b935efbedabeab8439d42baa1d07b2f3d5e2964dea9e504ff2a4d4b9f3e6bcd SHA512 5fc5786abfc1258d29f3d37e89696dce8f4f770a889bebc4b287ee777cfb3e933025dfad015c9cd5984fcc355d06db4d95d45af768d2dfc5c76287a3ff5e04cf WHIRLPOOL b0e140078233ae10a944db92fc1268e9f73239ca045a89e5f4ed933859a97a075c20cfa3702b69eff807dfd0a10007c9051ccc272534438ebd7a504d359e1b29
@@ -43,20 +43,26 @@ EBUILD gvim-7.3.556.ebuild 961 SHA256 97eda6d7ebe1aaedbcf1a28d6e8d4433a2702f06b8
 EBUILD gvim-7.3.566.ebuild 961 SHA256 ce9392f8be0965d0965d935f5a7a7cb5e3abb2f18d22d81fc6efab57c3a1856a SHA512 40740b0503affaefd997ab0f69c8f2cf1047276093432f9088391ce700872f36c947b2bda913eab50f3616d0eae500e2ae5ec989230c02912bd2a123402bd0f9 WHIRLPOOL b5c0b80a2089dcb5b29c6d17332ac767ef8e92a587ed0ba001882906f4192ed8163760ff026f7dfba06394c2e81b04acc8e63746612d42982097d622422f68c8
 EBUILD gvim-7.3.600.ebuild 961 SHA256 375a3db9f90622750109be3fa6e20fa4494ebaca4a0b5f4503771628cfe16e3a SHA512 4f7b370f25e184174c273a895017ce2d4788bd8f632d9a9cf334f392a3b825e4211b15fce416dd55c75f31ecfa5c7451946f5a012ff52a84b8e19bc800df6291 WHIRLPOOL 4d572b0056448d4d31b5979668b899580c8c9c35cbe25e951aa4b8dc6f78149b5b28c0992a0a46dcaaacf973bff520484d91e76352822e532c1465897d4dc3a1
 EBUILD gvim-7.3.646.ebuild 961 SHA256 cbb1a32a5c1e81edb59c62464a9fd6a27a168edd11325ce2267685afb10ddfcb SHA512 3b050440c6dc589d8adadc404e49f2828e707ecd00fb31f3f45e2e9f54a4a46d5c599cfbf561af7993abb1ef0ac25613bc6aa615450b9e436af9e7af2cab2019 WHIRLPOOL d47f104cc351290100fa283edd2092bbe6f1feff921408b472af4ca2b1ab1dcf83c04f2608edcde0f33554c151092436df82af99690dd792864cc616ee32da84
-EBUILD gvim-7.3.762.ebuild 954 SHA256 23cc366086e6f40a0a2214b23756bded83e85b900c5a48c38225083a6226199a SHA512 df8bd233b2da2f8fd8586231836428692043db49d20a863e9ef1a1a6abe3b7485d6d0f73fcffd474edfabfc3a138073f85cb375732f8e5ed7ea894376542aae7 WHIRLPOOL 4193515d58794d0e2264d94070197a2f294d5cacc4c232f1864716444089b8a9d3b4b911cb335dbb938e82e613daf602cbfeffc1690aae6bc94c1211b4c7b801
+EBUILD gvim-7.3.762.ebuild 953 SHA256 b55e2d769b8d757cb6355c44d07fee7ddbb707b03b9267a2d861e47dc4085922 SHA512 384ef5564dce7cb5fe691bb4c15edcc14e6dafe494c19d1424781c8a8e69cbc24cd7a3ed1db624d48f91660060e59ab78147a125177dc9ec35cfd9b55de7ef5e WHIRLPOOL 98c94828051216df05c6b6e0d55b63f96faa27beb66cc34b759ddaff5ee68e041be733334d8c2bad5e4379516322cebe20eb2c4a644b2192a207207b823f8b71
 EBUILD gvim-7.3.905.ebuild 1139 SHA256 e23ec1376bba1f4c2295f332f488f3e5043c2d2cfb63aa5d0c7f01f4b0c150f1 SHA512 68ab370c09d995ab92d19e9e8018f5f1850d49ec721faf959331fae1d1642b478930b9d8f08ef42a11e52e9fec9cf2b4c2f5094790a3060b2b78ae3fc58ed71e WHIRLPOOL 95f0052f7813d0f99a9764d8c3f8d76fabeeb33f6745c1d20f7d220237ba6d556eae29d648df8b4cfeb9cadd576dc2a673cd406854f230602dba7077e85e468d
 EBUILD gvim-7.3.931.ebuild 1130 SHA256 484f8efe9e6607aea9feae3c792140ffa4f847c3fbc4c0bf24ebf8347e205ef8 SHA512 10e1e9c9a7bec5cffb53421ce3857751a813633a0f0b14417882ca5c3a4f2e57ad107f3dce15949f32dba6da6b836d2dcb2548315f72839122fdbf904045456e WHIRLPOOL 849a8d48e6f1874184352a06d0858218f48d461539001357f5c2a174c5267bc1addd3880d06a9df072c83b3984c224896f04392726af73c56e55cc5d241392fe
 EBUILD gvim-9999.ebuild 408 SHA256 3e9e3e99b9317ef1273171f9a80546593f684cb3a96e3d336ae4eef558577437 SHA512 e43f7da3cb763cc5333eacb955dc1d2875c20b11dcf489bf242b711210059600e1d31f5d342105014091097b69c41ebffea53688ad62b15dd0272ba518da5725 WHIRLPOOL d6b684d63a81b3382a766517aa10b74d88a6c2f1ab486d3850f8fb8d82bef2373dbd3383ecea73274822f692a3726463542b62ab2b48af51d7e4909a281cf8bd
-MISC ChangeLog 53403 SHA256 2e4ceac0e1276131d4c645e4b4cffdb61647f7e7f507e7d60f16055c310c5ce4 SHA512 585115a9b2e4b399937111f7ed4374dbc7a8495f97c2f5875c782206d703ae5b96b54d77fc74de0cc0f04f96d880eb7c0edc96fb5de4fe3dd1373e3fc4a83d5d WHIRLPOOL 3ab318daead8fb4d8593245c543ce4e75b00d1454ed3b7f72f90a694482d4b9973860935036a66867421298aa2d201c156e176e19eb1c5c54664ba29c3706d69
+MISC ChangeLog 53503 SHA256 ed34d26fe258e71f32c5ac16fac2c1895bcfec5f0451f30514f1346ac0052bef SHA512 ffff2c5293f25589174e4325e9a9c5d401b153adba2e2dea4e50358f4d54a7d7e46169abee095849460e01607add2e660fb95041c6433a4b22ec375126b84670 WHIRLPOOL 7faa71bdf25b5762695d9078c93ebc72926206564ae92ee0d884fd46f0b88abbc24d6c22706434e0c59b17dd93fc502256cdff95b23acddd23d51a28c3cf6b63
 MISC metadata.xml 256 SHA256 f4c244e16d3addc264e2dd76e6fbf341a933584e86e2e325488580e5cfd88d22 SHA512 43a8d355895af346a37d75e0e720bc8a11934f781acf7d2ead09f2285f11938c428a15bdef3278510b1d8d986afd392b9895f40a9bf055492de66c784826d373 WHIRLPOOL ba679403f463f83c0b039f24a01d04eac83df70b0b964c7b6a3a9e15e69311333e5735bf12763a86da0eca4fa295b00bdde90ceafcdfdeb73248e769ae1feca6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRlX1iAAoJEEqz6FtPBkyj5QUH/1f+xT77bap7ohFfMyy/K4o1
-y5RvYKnkfOwwZ7HGmz2wOFIlzHz/U4mBh2a2d452TIwb3mJlFuvDPtHPbFu3Qh+5
-BWrOzS7K9EYczJ69N1Vfj8zehS9XYXpIHRGEW/aqAzNB8B4Tv/QkyafZngTEqgwe
-yNd2z88z9hoEm8UPpeUGYf4GtBhywbXxbkJyOEpp2fGAY+GFTXZJInrl5e5Lr6v0
-Pii6cuRz5gKFtIrW0g5yh7CA3CVlSMcPeANyvZU1pbfrHjJFMBbok1FjEQCFJmwK
-98NbjrTpa3IPDSFWJvawrxQVdi+GGji3PjiuvbGQQsA6NPmMrY9XnwuzvtxH0+c=
-=tfOA
+iQIcBAEBCgAGBQJRnKFxAAoJELp701BxlEWfVhwP/2BTplfdr6mYtUb4Fws9IP0g
+uvki4PclKF+cIBW2DpNnKq6kuMrSFRUO0TQUt5Suaa/tMkaqtnJbV3KQzNkMZKE2
+ua5sQw+xeEHdrl9EPMD2610ZerIstbuZBpIMnwav9sMS6VqovRz6ii4Xhs3mp15v
+NsvU7WKnfysZbod59oaQ/9ckk/36xi4IjH2V0/uxKaUhiKt+TN+EDmTuW9cQLbLL
+X1Lg8QPgmg1/rSD68c0gKc002L8/hrsh0jsga4K6Gd+gdbb/3XbfbAe35TN7CBxu
+ieeHteNzXetALVyExNKYSrSrrcyj6KkoP/FaKVedbuGkxQBcMNphHRLngydCrsor
+KBf4c/bx42Kk+Dxhh4DMXZLXLkjGcEopgHGW+MPtaEKai+vsvyLWHweII3JyzEpt
+bE/JQemEoc9N3qkNQJu8Kcq7tCh4Go9YaY/DERcYJ5177Z/gud+Dl3LCyOEENtJs
+jKX0EMWXbRCqFPJ+nxWWje22qbkU5pKFzmXjI3aphU71HIX+6TpxVPe727MX0hqP
++9dHINa6Y3O/4PrgQ2960RJRqvVZYy5CKXK1JjGYaZoWoMRVhMBd7GInpcw/tZAm
+Tycf/A1eNhjCoWPdUHjEBqJJA5kjq8G70liKwXEUbUdvmS5xuQhRxGcA9dsp49Fb
+abPsMSsaOgn55ftgv40J
+=k2Gp
 -----END PGP SIGNATURE-----
