@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX vimrc-r3 6047 SHA256 ec156b3f51aadbf20ad17248d918e61153f08fb14402c05b1255042468e7c5de SHA512 3bd1697cdf07cd870daf13768f17f76967de01891836e4c206ad8f52bf8c4aaeddf95f09707c6bc91e9b4b12c106d63f533c51081125322d9349eb78fafad782 WHIRLPOOL 65fba3b3de2671c5418a7bfbdac71444b1679cbdb7461ee1ae47cc639ecfbe510ca928fcc3d98e495e6cece19b02f229b2706d625075307ddb642b59b94f807f
 AUX vimrc-r4 6919 SHA256 9c59acc4c486a2aca5c6e5e297f13521a8ec57ebd540ec9ab846112fbb3e5c39 SHA512 f4ea9d2865e400d9b205ee8924b1152fa38434d1b73c67bcfceda18f737db8c8763701e12a3608465ef5409e74bfe6b5581a500577c826a16f3112bea49d63a9 WHIRLPOOL 7c7263db7b219cb845e15968c268c25614610696d6e5b6c508662b30640392aeb9f823ef4f74873ad2785dd354eb32ea612794ddab896f63bd4a24c53b38f182
@@ -39,20 +39,26 @@ EBUILD vim-core-7.3.556.ebuild 992 SHA256 f1082aa9cf825e65e39e3688233eb241a4a569
 EBUILD vim-core-7.3.566.ebuild 992 SHA256 8dcabec1be3a6f365147f1701ea225990b337927a76e0c4bb706b2be504fc8a4 SHA512 9d7c2f4f49c5a1940ddf8a37799ec4e40cf4e402ba57ece9222909453dab986848f7748d3012ef18eaf24809fce0c4c485d9200884ba803aed07a931a52bc0f6 WHIRLPOOL 4a8b024035c620ac0f2cc5faef15e8b6fbca1be5e7a10be0a1c21498b250cc44884a97046f879ed8e16bc83c1d14e63ce36aae5b0986aa58e4e6170fa07533e0
 EBUILD vim-core-7.3.600.ebuild 992 SHA256 4f84ecfb3d27557ccd5bda56920e0776d785f67d6beafaa1bbedff9f409765c8 SHA512 6437c36a3a1c8a20a079c92f40dc42573d9c386fac19cbf45d7cc27d0b88cc057e9a023166f3a787fb6b4d94ec9c423c5cc4e7e86d2aafd1569d957eb450f83c WHIRLPOOL dacc51b55d3f4d06524234f8047b0cff583e6a4136378da09e57c1e4bf8742c839f250a25d9bdf68e8ec9a5630084352caf39521017923a7fc1d431448548647
 EBUILD vim-core-7.3.646.ebuild 992 SHA256 7038e6a166239a3ed97059e69d773ee76d3b0ae265442800956ba654676f8050 SHA512 c0662b43866ce095e358041f03f5a892de858935d5c0a2e8cd4372f6f01ce4f8d57f3d294dbf1771b5161ae3357096904cb0749b867112cfd0e7de359e5dec33 WHIRLPOOL fe6b4fc6c77a39012ac97077fbe6ba9d1c33e76354b9fa08c0c661731c4c3601b4611db6cb3a7e7cff7066e19042167097fc2dd568de6cfb4f6bf6769eb1a9c0
-EBUILD vim-core-7.3.762.ebuild 985 SHA256 9d0759891b8e5f088ca6f37b5e4951a546e724870da3000dd2863ca4d4efc18a SHA512 b63dd39d5c4fd7737ba100753aef977969af2ac731ff0c5a48315cff9db9c69dbe8e6beafff9735c5c7a7f7132cd258a9efcd2d518c01fe1bd49cb5a23645b57 WHIRLPOOL 61ee41e9ba1b519bb6d4b097f05ee4d2aab4f39b68f1bc5ddd59388ca3cb39104c3fe4fc9b4af979eec104e967f795447fd52eda2ecf9086b4df356ceb30aa23
+EBUILD vim-core-7.3.762.ebuild 984 SHA256 abb02c65cfd68054003f9757b57a54d55d0e55c415a24d2dc868d5458faa1d98 SHA512 bc2b7e490c674a92918756a56579bd25623d3fb590d1fe84995975a555e6e28edaaec82de3c74fad8d4952f0ceb2b19b9a107746f8d1bd29032dd48f12b1d491 WHIRLPOOL d421626ef6e41034fea65d18603a0f87f89173c38ff7dfea62aeb0e37c1fe36a937bf65bf8b82a0fa3422780288b27900f75ecc9d9c03d275a025fcc45c51f48
 EBUILD vim-core-7.3.905.ebuild 1054 SHA256 ed1055a936450ad9a334bf226cd0246f7b7cae184f402388da1d2b925f1f27d3 SHA512 3f7db5b96318cec5d29196450a143fb3761a0b1840fed93969addf86601a9035e5f843c7a681593e93adb65550977330a1e375dd676422cfee667feb1a2b7452 WHIRLPOOL 93f39652c6580cdd7f7313592c6498f6a4a5377247df52e110a780bd92ccb8e90f3549c4c8b6c97c52f9149611e0bd6e43b2bea760ed7b6187d4f428afa89472
 EBUILD vim-core-7.3.931.ebuild 1045 SHA256 f4961ff7d7ac5dd5489faac899de2e21f30adfc8456c07f5927c3178283064c2 SHA512 750441bf0fc65f4358a4eb8c638f5f2412a86108ae059c8e057b645be9740049e561528aabcf325893eca3b90610a2964ee19d8fc0f750d972a21d08f7bf2387 WHIRLPOOL b1a79a17a0c7ab9167b2af25c1598e5ed37d36732d90747221b3a5749541fc52158ad5db14e03de46d7f9d67e637c8856ef460a976a27615662fc276e72e0a64
 EBUILD vim-core-9999.ebuild 330 SHA256 bbfb17f3b9d93300bb0ff5e511fcc180f35d33a63edf09f419c31edcf46a47d5 SHA512 31ca08b09e37fe696e9d61a2567cd29b3d9dcfc21fe9484aff3e4a69e83452e1f97e70350816fe32de7f746262f34764c41049d82ae40129372b4a0e5ccad927 WHIRLPOOL a4e03cac7b11b9a7fcc1df26ef52c862f47c8b22af9a082471b9a08799fe94c99d238da3cfd23a245a521b085af4f532be40816170d0d745baf2393551d1942b
-MISC ChangeLog 55911 SHA256 f080ccc3f7fef3a44186367c3b0fa944c809233d7ac91b8064f2e0e9ea46bde6 SHA512 1944305c40245aa9c3e5967684f0fc3865edf2a7c112cd0d52ee402ed87dcc9756d110cdb820a3fc7b0912ffc5997ae0ca7e7c5e514819bd29eed0ce553113ea WHIRLPOOL fff97f4dfca9a44906f138ac24fb56d062eea6fb2a4b24093cdd70b29c1c770d424edcebebae4dec5aeb82ea04ed6dbaf11068b43852cd52567ac6b140563412
+MISC ChangeLog 56015 SHA256 90cc7aea44903be0d3509f2fcf1e63470d0175913de4a63379212595cbc284d2 SHA512 d681a6850636156ced8a5a143ace61b3c2087344fc45185d4ddf196e5fcbea265f4fec07043b22cb5eda34ec525bae2e4f41cfd7020d200191042dfaa7818b99 WHIRLPOOL 66fea1730310f3ff64076a140a40cca4e13f885a81b667b4164df5c2cf7a8ce06a26ee5f932986ab74b3f37dae4594ce9d647e4722999966917300a6361d0eb8
 MISC metadata.xml 156 SHA256 64d20c782589b423a6e75ba6fff7edead1ec8fbae742d27dd57f5299e8328500 SHA512 7dc1d902106e794e1a12bde5dcacb8b7143584cba9c61e72ac5728dd952663144c1b0efc949fbbc9fcec03b396b5e060e8263eaad7d70cd82d6d5b350c62f0c1 WHIRLPOOL 4381a5d144e783e5979d394720b32f7d95818a8571f748e72c5ece965c4e0375b1aec0c34f6f506a9f9fc255f1b69a220fdb74d1dbb8aabc92ec48afa44ab883
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRlXvMAAoJEEqz6FtPBkyjHa8H/RE3zfW868TGNED/dl6DI+zv
-6ZYnAfBJaRQF1vtkula4b9zJbZkITyhrlZtdxWgWmD8Qxng1zRSuWpGzqyJffjpP
-dSVpaceCIkdICOnvcmi+I6ZzeBi+kHCQ/cGE0S0qF5YPFPi8SuzEFpHOO7PI1kX5
-gAA68p7X+E9AboeWoco5jlT6Jon/2Fi6Q0KmJHiQ2A/Upi75IctVnAj5qFi/9/Gk
-5+DYwwf7fSV2RZ32+AjqlnvLmBFOCZp7WpZYh98KtOl1otzLXsrjsunZ5Jzox3F9
-Kqu7+McZlSch2uqzbsPBz3aOKOQyUVmMnd2C2ex5k2BbZeCRIDuDd7lkKHlFVO8=
-=0q+h
+iQIcBAEBCgAGBQJRnKGGAAoJELp701BxlEWf2VgQAJdytVNdUCjZkrZfz3SBX9zl
+q+ob7EbKzdGf0qI2KXYKVaijFR0ToV0jAdV65l7p26MWi0RNfKEpFike6U+xWxm0
+rIVb7hU6ZCyVxK6DaULG4mVnIlAeY2VhKFDR+sf1F0CdyIsZ5zncqEW7qSKdKR2w
+PTXYUviqTqgJjW0PvieqVsMT92+KF0m7892SR6j2+WrtetztjK6k727+p8Npf7/6
+5JauQyIHE7K10y6nvJtKzYkXoEQeL1fMYTNiaEG5/dubTjNzUYPZGTWton9paJ3m
+CVU6rf4MYhGAjVQUFAGDw/Vt3fLRS4y7y0MjevAK45K/yM+2O/oPgTTms0LabjIe
+1bjQ9O7WvgIyGLliL+78i1nTFOU9nJ2qH1GNr2TYk++bX2PBLBAseVumCjlfToLG
+wGXuQlQdspSGVypDbqL+dl/OUKMjkzZi4cW0dklXPv4CwU8fG/mbPA7bsbQZg/0B
+2piaIMGK00IWFD3nKEl/XNcU6kA2xcLSij230MR9yvGgrtUJ/4uA8k1AIyZ+NjCY
+ME65MSQO97UhV/OqFK09DHeLIQ0CiOEualaJ6cVyK+0ZdlMwTdj08IiCltnS5yne
+MZI+XXwX5Zz1wf8cZ3eKItsBdLIK3Zz8CegLWPK7sI0aW6lyvpKoznIHvsJoeQ50
++ozkGmg1PsZ6tUxabyep
+=sSvl
 -----END PGP SIGNATURE-----
