@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX vim-7.1-interix-link.patch 716 SHA256 53459943e62247469f6fbaa30abd36d7629e02bd26bebe3e8947d45b23408bc9 SHA512 f2d5401eef38dcd998e6df4dedb3035d7818aa491049457efeea686b58c7f221003032bbf0837d51fe0545152246ac07fe0bf4a64b10a1b2493146abc023011a WHIRLPOOL d319c29e5bcbbf61dfb4a75f7d9f992b71520314c15056b73505de69c45db41c5b16413d11a94172579c9de56713c65101bbf9427828940c98d24ff8845df870
 AUX vim-7.1.285-darwin-x11link.patch 388 SHA256 0b935efbedabeab8439d42baa1d07b2f3d5e2964dea9e504ff2a4d4b9f3e6bcd SHA512 5fc5786abfc1258d29f3d37e89696dce8f4f770a889bebc4b287ee777cfb3e933025dfad015c9cd5984fcc355d06db4d95d45af768d2dfc5c76287a3ff5e04cf WHIRLPOOL b0e140078233ae10a944db92fc1268e9f73239ca045a89e5f4ed933859a97a075c20cfa3702b69eff807dfd0a10007c9051ccc272534438ebd7a504d359e1b29
@@ -40,20 +40,26 @@ EBUILD vim-7.3.556.ebuild 1012 SHA256 50e4b59643765d4ed9a1a3167185f8d19ae3f4c776
 EBUILD vim-7.3.566.ebuild 1012 SHA256 55faa81bf252f6770a5ed337efad861f47658cbd7ff3b0dbc754aaf04ba29081 SHA512 3b078a16116411bce579d8219988d2312f11f6188b588fdee43900559ec8e25a8566bde9c84cb70b85ffdd8657e106630ab38da32eabd3bc5250a504ce1f0425 WHIRLPOOL c5739b399987a1d98e96710e6f6b65a268422c585bc8479b352d4cd223984482cffc8a71e54b98874b40eccf5fa572a2ce1c1266d197be1dc646b78fd30aa23f
 EBUILD vim-7.3.600.ebuild 1012 SHA256 9b481c24ccbe62ceec6048dcefb148fb6de8231a30a4d71e8373769498d279ba SHA512 1e580bfb46c334fc3e44ce5d790a1dd40215f6a7eb6f53dfdb5101ea20b1d646e9c48cd940b37ce75bed8ce4c74b7c2c844e1011b73e0118819754d295eea29b WHIRLPOOL 2c04b943ef8486d4de48837e1f028dfb7f59ec88a5a43317561e64c4400b1f040d2a15b3e9e1a4ba0d68d8734ac899375f315f3a80784334dd68ec82372f6422
 EBUILD vim-7.3.646.ebuild 1012 SHA256 b05b3d34e05a1d4b52030d4578cf7adc2cb39ac77017d65a408645f7c4a79167 SHA512 3dee3fc9040e5beeb9fc73b17a1810397157ab86522e01431bf1f408dd39ffeaa3716cb2e90077993d51ace495d1b195665bcb7006591b59ac2afe6d15344c5e WHIRLPOOL d65a3d7a61b0cf385cac8ab75480f466485636f8faba18e75c62b191d2a2b1e7f006ae23ad324f4fd186e37b3a6c0473afcd457b3868ce8352bec29df06b3c17
-EBUILD vim-7.3.762.ebuild 1005 SHA256 868533a5ec2611171f10557346ddcd09799429ed94e2fe94f844de502ee20c49 SHA512 8395fab239b905bd7d624ba8cf322d8c6ac830fbaf7c31cbc6adc81a649875cca6a1a1776703f02e91a96450709ad81bc1480429e96bf18360a3fe2bc0c2ce4e WHIRLPOOL 9e37cf23c80873493cf0bb7394c33912a05868edacc8853eff840a0ece3a47d5ef5297c1b301c181eb8c6e2946d19717c2f13340cc6e200bcf9fd599036f40f3
+EBUILD vim-7.3.762.ebuild 1004 SHA256 f0f3d4dbddb9ef9a377e86c528d3ef7b169991aa17a415b627bfb7461fcd4409 SHA512 ea76767997b5ade7c03fdbbd9bc7a81984341ce005d36c07722f898fee32aada807553bb18a1af7c1219699a8127fe5494689fd0a1243caf2737059e7e6e33e9 WHIRLPOOL e353f47534940ff8323c6a77ba8c9c3e616dddde67eb875dd1cd6ec202dcf922736f74c84aec41d038ce22739b8f7c3f6975df45ecedb28841cbfd4d3ec5ed22
 EBUILD vim-7.3.905.ebuild 1190 SHA256 b4f16c94016985c7b05fbbc17c713d06bffed04c673a34174f3a20a58282a6d8 SHA512 7034cf512f61a3ce1dbc60489084ad4c58b90c766daa2c3967ca80a29f2d89fc134fadf1383c18cba1e4d435fcc4a31a6302abb8836967a13c3a0d575b8e3829 WHIRLPOOL cfc0e883c9b79e931faa5de97eb460e5d83672f683e311155450ae11dae2ec123fb1ece31fa907a34cf1b04f6e78a15b074939805cfee762858c53ff62602b63
 EBUILD vim-7.3.931.ebuild 1181 SHA256 06607685e6f99de763e858ad25e92a124712e74212026c87f125e156e5ea8725 SHA512 c9a2f2532a76b9e230f0e3f4b244ed8866a6095ddfb2510e969ef25c31a82be3da9ae60b6cbf83ecaa69f81bf433f5f8a971ec9d8c0238e9b7cd81f05bb6cf18 WHIRLPOOL a370b9eb022829d8a216aba5e1d866030fb83759ffc7f066105151744cba4fc1143e27580999d81cf69d6ca77b7e7af6298fb991f9f669ea682604fa3254290f
 EBUILD vim-9999.ebuild 357 SHA256 b9ccbd3f94f0335c37d2c19a57a7231837cf177b1f81b3da1d66bb37c502aef4 SHA512 b914449c66ea950f030549bfd70f0a328d01bb0b54c58deeb33a2dcde2d7afd6b3bede6b007460fa6858204f3a059d6eafe06d1d2467ed7c44230f9c95ea8f96 WHIRLPOOL c67274eb6064a1c6101d9facde12f71a013c135b1dd037f8477c3516438d29a5cb63c94cb189b4aa39f8f7fc64f618cb3f15819b723a064a5b31944526be39a7
-MISC ChangeLog 57289 SHA256 21fe89fb8292b66543e3c4e85e4d98c5cac16d57f9a8930a06982b602706856d SHA512 fdbbabb11aa03b7da59cc68a6f061322f09b5cb5697f725ad0a64e2d8dbf4af7d4b6ee4991d9d83080221f07019589c6c45b79542dc0807b8cb071a82293dbb2 WHIRLPOOL c95a0ec9d7f3717d5706c8971844f08c4c5b363b70cc31f5c02c32a8a879713a71bbc497cddeeeeee56b78ccfa73bdc8265035b83612e098c802e626afb25148
+MISC ChangeLog 57388 SHA256 cc2d0adb211722a18b3d2fad851e2149c261e96f009450e58191d2227bf91e1a SHA512 7f80ae6068d2ecd08546628437210afb51c690af90a0915b6aaab7862bcffbf27e572c6b100dc8d2bd6088872a07f3572d6048202ff7a1c3a8d864ce8eb1a604 WHIRLPOOL d016a3593436e6536fd3fa801d2f23cb52edda04ce42fca7e51eb3a4223b2f6f8928220436c1b268172ae805d307c8d1f1f4b57c120ddf6d7b2b510b61f7a77f
 MISC metadata.xml 354 SHA256 6429d34cbfd1878645047ac45c97e9ff6d13e5eee7d438e796cb7e35c4ed8e90 SHA512 2f6ae2d0dcca67f5588b722f6a39c3a5f0eb094c56b93659894a8f43f8717749f5f2fc75c74382b56531e145af716ffa3b1002f3a68e0a5dd7e27264275047bf WHIRLPOOL 1e990c034a49b6e09a8fc581ec4cbd6b766c4edbadd205cbe1d03a438a5c593a647c260dd85a1635ed140a563d9ec6dbdf0418f3704106ba9e1b93541b8dc9f1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRlXyRAAoJEEqz6FtPBkyjDh4H/3pBMVVcAT6dntRBnmUtNDg1
-j+3UNcWFmwZ3lpk+2jwxmRCo9+8csbe9WXbuRCxqxz3t6YlA+MkIwtvHJ0rK/QQw
-U2Vy7M2BwrM4WuiOsoZVLs7olrKv0iJYa4fsYjn+QcoDF04rQhcjHPqrtEm+Bg2L
-FW8yRW+914F+1I/P5+9YUjPZU9KNuMkLK03sHKRv76awJmS17soy4ELDVwhoL5au
-/1K87ksu6QosT5O/S3GXgTsTmXuV4of8pjHU7ppN0/CSSOkJVixwSSeYqOVMlRLe
-HNA5hEmcL5w2F90TSeZjG+oDvJIpb6vaCYatMgMkDbfQv3iHIlHdY5q/VRACuh4=
-=Fk2K
+iQIcBAEBCgAGBQJRnKF8AAoJELp701BxlEWfevgP/Ato8wPNRIA9e0iKXyCJQOEm
+y7OroOMGV729D+gqJD7Nkf1SAP1USYDk4GRx+I39scy1dQ5bpEgHb/yqPvhhvx/t
+OMpief5IrVX3HwkHEjVm6D6piH3b0ThSBmlOTtcE+IiCkZAW9CSq9kI5m88A8C7A
+jRo9lrBlJX4rdQPpSjizdxRhg2iqEWO81uEqtfSI1clAktqmaKF1saAbJt8/whUT
+gmsD4onCU8QOeDKCAU5O0xO2Ha+r7UmNx7GzX73r9lQFONR+UMzLh6i18ozFprtE
+qmJdrSouNVVoON3ESZg/JKlBwhC2eH3UWDWil8FQu0fPfUmBOHCxT2ZM6ynJwUwm
+5xR+R05CPV5gxdG/JzT6B44b9CUA3hsMVepTWdLaDxRumiUMZc0rYsIOvAj7hsLb
+VGb6+mPv2e4Bcv3TJNI6t2T35V4hVkClvD1QOP1rF8C/1f+3m1FdD5b3OFLE7XeR
++l4xw94h7jxAGNXIk83nulYh4Ncigzk92zo/e/b0VTDNsjW/k0x+bo8Ff7AGHRXC
+Rz43Molz/+R2zGgHg+u+lZUI+A8HM9E6HFlBDrdXbjK2SuEvK5nc+dL6CPZCCYmj
+eI1pKWBLTyfrCfim6Z1BQrIj2eIU+khOn2Pko3/Tjal3qOliDM5sy3APtNyuzFGH
+OLn5BIenGkU6NPpSdn4D
+=STyy
 -----END PGP SIGNATURE-----
