@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim-core
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.414 2013/05/17 00:37:29 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.415 2013/05/22 10:47:07 ago Exp $
+
+  22 May 2013; Agostino Sarubbo <ago@gentoo.org> vim-core-7.3.762.ebuild:
+  Stable for ia64, wrt bug #469010
 
 *vim-core-9999 (17 May 2013)
 
