@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/vim/ChangeLog,v 1.428 2013/05/17 00:40:48 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/vim/ChangeLog,v 1.429 2013/05/22 10:46:58 ago Exp $
+
+  22 May 2013; Agostino Sarubbo <ago@gentoo.org> vim-7.3.762.ebuild:
+  Stable for ia64, wrt bug #469010
 
 *vim-9999 (17 May 2013)
 
