@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gvim
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.394 2013/05/17 00:44:17 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.395 2013/05/22 10:46:47 ago Exp $
+
+  22 May 2013; Agostino Sarubbo <ago@gentoo.org> gvim-7.3.762.ebuild:
+  Stable for ia64, wrt bug #469010
 
 *gvim-9999 (17 May 2013)
 
